[gd_scene load_steps=2 format=3 uid="uid://dpigiatnol3uu"]

[ext_resource type="Script" uid="uid://djx5giqraqa77" path="res://scripts/ui/config/organization_tab.gd" id="1_v3r87"]

[node name="OrganizationTab" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v3r87")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="NameSection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/NameSection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/NameSection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Organization Name"

[node name="NameEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/NameSection"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
placeholder_text = "Enter organization name"

[node name="IndustrySection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/IndustrySection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/IndustrySection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Industry Type"

[node name="HelpText" type="Label" parent="ScrollContainer/VBoxContainer/IndustrySection/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Selecting an industry will load default settings for classifications, overtime rules, and more."
autowrap_mode = 3

[node name="IndustryOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/IndustrySection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
selected = 0
item_count = 5
popup/item_0/text = "Healthcare"
popup/item_0/id = 0
popup/item_1/text = "Retail"
popup/item_1/id = 1
popup/item_2/text = "Manufacturing"
popup/item_2/id = 2
popup/item_3/text = "Hospitality"
popup/item_3/id = 3
popup/item_4/text = "Other"
popup/item_4/id = 4

[node name="SaveSection" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/SaveSection"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="ScrollContainer/VBoxContainer/SaveSection/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Save Changes"

[node name="InformationLabel" type="Label" parent="ScrollContainer/VBoxContainer/SaveSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Changes must be saved before switching tabs."
autowrap_mode = 3
